# fastapi-task-manager

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: a4850b7f6ce8_initial_user_table.py  a5e7510c8453_add_task_model.py
app/: main.py
app/core/: __init__.py  config.py  jwt.py
app/db/: __init__.py  crud_task.py  crud_user.py  session.py
app/models/: task.py
app/routes/: __init__.py  auth.py  tasks.py
app/schemas/: __init__.py  task.py
tests/: test_main.py
